--- a/src/main/resources/templates/cheese/add.html
+++ b/src/main/resources/templates/cheese/add.html
@@ -20,7 +20,7 @@
 
     <div class="form-group">
         <label th:for="type">Category</label>
-        <select name="categoryID">
+        <select name="categoryId">
             <option th:each="category : ${categories}"
                     th:text="${category.name}"
                     th:value="${category.id}"></option>
